htdocs/css/ui.quitpanel.css
.ui-quitpanel {
	font-family: 'DejaVu Sans';
	height: 50px;
	width: 100%;
}

.ui-quitpanel .ui-quitpanel-button {
	width: 40%;
}

.ui-quitpanel .panel {
	text-align: center;
	padding: 4px;
	display: inline-block;
	width: 100%;
}
/* support: IE7 */
*+html .ui-quitpanel .panel {
	display: inline;
}

